track and return kernel info
